--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="./assets/images/amogus3D.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AmogussGPT</title>
+    <title>AmogusGPT</title>
   </head>
   <body>
     <div id="root"></div>
